<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".InscriptionActivity">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutPresentation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/scrollview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ExtraText">

                <TextView
                    android:id="@+id/inscriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/inscription"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/EcouteTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/EcouteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:text="@string/ecoute_text"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inscriptionTextView" />

                <TextView
                    android:id="@+id/CreaCompteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/creaCompte_text"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/EcouteTextView" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_inscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/layout_boutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutPresentation"
                tools:ignore="ExtraText">

                <EditText
                    android:id="@+id/prenomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/arrondir_edit_white"
                    android:gravity="center_vertical"
                    android:hint="@string/prenom"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/nomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/arrondir_edit_white"
                    android:gravity="center_vertical"
                    android:hint="@string/nom"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/mailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/arrondir_edit_white"
                    android:gravity="center_vertical"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/telephoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/arrondir_edit_white"
                    android:gravity="center_vertical"
                    android:hint="@string/telephone"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/mdpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/arrondir_edit_white"
                    android:gravity="center_vertical"
                    android:hint="@string/mdp"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/typeCompteSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/arrondir_edit_white"
                    android:gravity="center_vertical"
                    android:text="@string/typeCompteSpinner" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_boutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_inscription">

                <Button
                    android:id="@+id/boutton_creationCompte"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/arrondir_edit_bleu"
                    android:gravity="center_vertical"
                    android:text="@string/boutton_creaCompte"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/boutton_connexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sec_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="111dp"
                android:layout_height="63dp"
                android:visibility="gone"
                android:text="tmp_signup" />

        </LinearLayout>

    </ScrollView>

    <!-- Pour placer le fragment de chargement -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.constraintlayout.widget.ConstraintLayout>