<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonDeco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Déconnecté"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/buttonTuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tutoriel"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/home"
        android:textSize="70dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/logo"
        app:layout_constraintBottom_toTopOf="@+id/PremTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/PremTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prem_text"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_boutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/boutton_inscription"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:background="@drawable/arrondir_edit_bleu"
            android:gravity="center_vertical"
            android:text="@string/boutton_inscription"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/boutton_connexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/sec_text"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_boutton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_boutton">

        <Button
            android:id="@+id/boutton_invite"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:text="@string/boutton_invite"
            android:background="@drawable/arrondir_edit_bleu"
            android:textSize="17sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>